[gd_scene format=3 uid="uid://cydquys2wwnmy"]

[ext_resource type="Script" path="res://scripts/components/LevelCard.gd" id="1_v2q81"]

[node name="LevelCard" type="PanelContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 150)
script = ExtResource("1_v2q81")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LevelIdLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "01"
horizontal_alignment = 1

[node name="StatusIcon" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "○"
horizontal_alignment = 1

[node name="GradeLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "未完成"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "关卡标题"
horizontal_alignment = 1
